Fix Disqus comment layout bug

--- a/themes/blog/static/css/style.css
+++ b/themes/blog/static/css/style.css
@@ -369,7 +369,11 @@ ol#post-list {
 }
 .article .comments {
 	float: left;
-	opacity: 0.6;	
+    clear: both;
+    width: 100%;
+}
+.comments .summary {
+    opacity: 0.6;
 }
 .article .entry-title a {
 	font-weight: bold;
